# bb-storage

./: go.mod  go.sum  go_dependencies.bzl
pkg/blobstore/cloud/: BUILD.bazel  cloud_blob_access.go  cloud_blob_access_test.go
pkg/blobstore/configuration/: BUILD.bazel  new_blob_access.go
pkg/proto/configuration/blobstore/: blobstore.pb.go  blobstore.proto
