load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cloud",
    srcs = [
        "before_copy_func.go",
        "cloud_blob_access.go",
        "s3_copy_mutator.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/cloud",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/blobstore",
        "//pkg/blobstore/buffer",
        "//pkg/blobstore/slicing",
        "//pkg/capabilities",
        "//pkg/clock",
        "//pkg/digest",
        "//pkg/util",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//service/s3",
        "@dev_gocloud//blob",
        "@dev_gocloud//gcerrors",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "cloud_test",
    srcs = [
        "cloud_blob_access_test.go",
        "s3_copy_mutator_test.go",
    ],
    embed = [":cloud"],
    race = "on",
    deps = [
        "//internal/mock",
        "//pkg/blobstore",
        "//pkg/blobstore/buffer",
        "//pkg/blobstore/slicing",
        "//pkg/capabilities",
        "//pkg/digest",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//service/s3",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
        "@dev_gocloud//blob/memblob",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
